# lula-assistant-crewai

./: .gitignore  README.md  agents.py  main.py  pyproject.toml  tasks.py  tools.py
data/rego/: sample.md
data/rego/audit-log-capacity/: data.json  policy.rego
data/rego/config/: data.json  policy.rego
data/rego/healthcheck/: data.json  policy.rego
data/rego/istio-sidecar/: data.json  policy.rego
data/rego/ui-available/: data.json  policy.rego
